# libgps_mtk3339

./: .gitignore  .gitmodules  Makefile.am  README.md  checkinstaller.sh  configure.ac
include/: gpsconfig.h.in  gpsdata.h  gpsutils.h
src/: .gitignore  Makefile.am  gpsdata.c  gpsparser.c  gpsparser.rl  gpsuart.c  gpsutils.c  libev_uart.c
test/: Makefile.am  fileparser.c  gpsparser.c  gpsutils.c  sample_gpsdata_usbttl.txt  sample_gpsdata_usbttl_2.txt  sample_gpsdata_usbttl_3.txt  sample_gpsdata_usbttl_4.txt  sample_gpsdata_usbttl_6.txt  sample_gpsdata_usbttl_7.txt  sample_gpsdata_usbttl_8.txt
